fix horizontal scroll on dashboard asn tab

--- a/assets/css/ioda/sass/pages/_dashboard.scss
+++ b/assets/css/ioda/sass/pages/_dashboard.scss
@@ -89,8 +89,8 @@
           &:after {
             content: '';
             height: 1rem;
-            width: 20rem;
-            background-color: #fff;
+            width: 100%;
+            background-color: $color-white;
             position: absolute;
             bottom: -1rem;
             left: -1px;
